# science-bot-2.0

./: README.md  pyproject.toml
science-bot/science_bot/: benchmark.py  cli.py
science-bot/science_bot/agent/: contracts.py  orchestrator.py  prompts.py  runtime.py  summary.py
science-bot/science_bot/pipeline/execution/: differential_expression.py  hypothesis_test.py  schemas.py  utils.py
science-bot/science_bot/pipeline/resolution/: assembly.py  controller.py  planning.py  prompts.py  schemas.py  stage.py
science-bot/science_bot/pipeline/resolution/families/: __init__.py  aggregate.py  differential_expression.py  hypothesis_test.py  regression.py  variant_filtering.py
science-bot/science_bot/pipeline/resolution/tools/: __init__.py  _reader.py  archives.py  discovery.py  excel.py  notebook.py  reader.py  schemas.py  sequence.py  tabular.py
science-bot/science_bot/providers/: llm.py
science-bot/tests/: conftest.py  test_benchmark.py  test_cli.py
science-bot/tests/agent/: test_orchestrator.py  test_runtime.py
science-bot/tests/pipeline/: test_contracts.py
science-bot/tests/pipeline/execution/: test_differential_expression.py  test_schemas.py  test_stage.py  test_utils.py
science-bot/tests/pipeline/resolution/: test_assembly.py  test_controller.py  test_planning.py  test_prompts.py  test_schemas.py  test_stage.py
science-bot/tests/pipeline/resolution/families/: test_aggregate.py  test_differential_expression.py  test_hypothesis_test.py  test_regression.py  test_variant_filtering.py
science-bot/tests/pipeline/resolution/tools/: test_archives.py  (+6 more)
